--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -25,6 +25,9 @@
         <li>
           <a class="nav-link" href="/rückmeldung">Rückmeldung</a>
         </li>
+        <li>
+          <a class="nav-link" href="/kasse">Kasse</a>
+        </li>
 
       </ul>
       <div *ngIf="user$ | async as user" class="d-flex flex-column ">
