--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -14,8 +14,8 @@
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-person-fill"></i></label>
         <select formControlName="besitzer" class="form-select" id="inputGroupSelect01">
-          <option selected>Besitzer</option>
-          <option value="FSR">FSR</option>
+          <option>Besitzer</option>
+          <option value="FSR" selected>FSR</option>
           <option value="Student">Student</option>
           <option value="verloren">verloren</option>
         </select>
