--- a/angular-frontend/src/app/kasse/kasse.component.html
+++ b/angular-frontend/src/app/kasse/kasse.component.html
@@ -10,3 +10,7 @@
 <strong>{{freierkassenstadn?.kassenstand}}</strong>
 <br>
 <button (click)="freiesKassenbuch()" >Kassenbuch generieren</button>
+
+<div class="d-flex justify-content-end mt-3 mb-3">
+  <app-abbuchen-modal></app-abbuchen-modal>
+</div>
