--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -12,19 +12,17 @@
       </div>
 
       <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-person-fill"></i></label>
+        <label class="input-group-text" for="inputGroupSelect01">Besitzer</label>
         <select formControlName="besitzer" class="form-select" id="inputGroupSelect01">
-          <option selected>Besitzer</option>
-          <option value="FSR">FSR</option>
+          <option value="FSR" selected>FSR</option>
           <option value="Student">Student</option>
           <option value="verloren">verloren</option>
         </select>
       </div>
 
       <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-minecart-loaded"></i></label>
+        <label class="input-group-text" for="inputGroupSelect01">Status</label>
         <select formControlName="zustand" class="form-select" id="inputGroupSelect02">
-          <option selected>Status</option>
           <option value="defekt">defekt</option>
           <option value="gesperrt">gesperrt</option>
           <option value="funktioniert">funktioniert</option>
@@ -32,9 +30,8 @@
       </div>
 
       <div class="input-group mb-3">
-        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-shield-check"></i></label>
+        <label class="input-group-text" for="inputGroupSelect01">Berechtigung</label>
         <select formControlName="berechtigung" class="form-select" id="inputGroupSelect03">
-          <option selected>Berechtigung</option>
           <option value="STUD">STUD</option>
           <option value="FSRF">FSRF</option>
           <option value="FSR">FSR</option>
