übersicht Anzahl auf dashboard

--- a/angular-frontend/src/app/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-halluu
+Aktuell im Tresor:
+{{tresorKeycount}}
+<br>
+Aktuell Ausgegeben:
+{{ausgegebenKeycount}}
+<br>
+
+Insgesamt Funktionierend:
+{{gesamtworkingKeycount}}
+<br>
+
+Können entsperrt werden:
+{{gesperrtTresorKeycount}}
