Succes sieht gut aus

--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -74,9 +74,12 @@
         <button class="btn btn-primary mb-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
       </div>
     }@else if(showResponse) {
-      <div class="alert alert-success m-2">Ausleihe erfolgreich erstellt!</div>
-      <br>
-      <a href="/" class="btn btn-primary">Zurück zum Dashboard</a>
+      <div class="col col-sm-11 col-lg-7">
+        <div class="alert alert-success m-2">Ausleihe erfolgreich erstellt!</div>
+        <br>
+        <a href="/" class="btn btn-primary">Zurück zum Dashboard</a>
+      </div>
     }
+
   </div>
 </div>
